wp_contextual/tests/error_wp_contextual_not_a_struct.stderr
error: #[WpContextual] is only implemented for Structs
 --> tests/error_wp_contextual_not_a_struct.rs:4:10
  |
4 | pub enum SparseFoo {}
  |          ^^^^^^^^^
