wp_contextual/tests/error_wp_contextual_not_a_struct.rs
use wp_contextual::WPContextual;

#[derive(WPContextual)]
pub enum SparseFoo {}

fn main() {}

uniffi::setup_scaffolding!();
